--- a/Source/MiniCast.Client/packages.config
+++ b/Source/MiniCast.Client/packages.config
@@ -5,6 +5,7 @@
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net472" />
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net472" />
   <package id="CSCore" version="1.2.1.2" targetFramework="net472" />
+  <package id="Extended.Wpf.Toolkit" version="3.4.0" targetFramework="net472" />
   <package id="Fody" version="3.3.2" targetFramework="net472" developmentDependency="true" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks" version="2.3.0" targetFramework="net472" />
